[tool.poetry]
name = "ansible-windows"
version = "0.1.0"
description = ""
authors = ["Philippe Hässig <philippe@bespinian.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible-core = "^2.15.3"
pywinrm = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
